<resources>
    <string name="app_name" translatable="false">Scoop</string>
    <string name="appversion_semantic" translatable="false">1.7.3</string>
    <string name="versionInfoText" translatable="false">Thanks for updating!\nNew in version 1.7.3:\n&#8211;Use built-in tools for darkmode if supported\n&#8211;Fix punctuation, capitalization, app name, spelling (thanks @MicaelJarniac)\n&#8211;Add Indonesian Localization (thanks @the7thNightmare)\n&#8211;Add safety popup for logout action\n&#8211;Reorder hamburger menu\n&#8211;Fix view broken on tablets</string>

    <string name="introInfoText">Please login to Google.</string>
    <string name="aboutText" translatable="false">WhatsApp Web To Go\n\nby Leonhard Künzler\nandroid@kuenzler.io\n\ngithub.com/92lleo/WhatsappWebToGo\n\n© 2017&#8211;2022\n\nv1.7.3\n\nThis app is in no way affiliated with WhatsApp Inc. The rights for WhatsApp and WhatsApp Web belong to WhatsApp Inc. This app is a private project to enable the use of WhatsApp Web on Android devices.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sidebar_button_logout">Logout</string>
    <string name="sidebar_button_new_session">New Session</string>
    <string name="sidebar_button_switch_session">Switch Session</string>
    <string name="sidebar_button_toggle_dark_mode">Toggle Dark Mode</string>
    <string name="sidebar_title_settings">Settings</string>
    <string name="sidebar_button_settings">@string/sidebar_title_settings</string>
    <string name="appbar_button_scroll_left">Scroll left</string>
    <string name="appbar_title_scroll_right">Scroll right</string>
    <string name="appbar_button_toggle_keyboard">Toggle Keyboard</string>
    <string name="menu_1">Frankfurt</string>
    <string name="menu_2">Heidelberg</string>
    <string name="menu_3">WTF IP</string>
    <string name="menu_4">Google</string>
    <string name="menu_5">Calendar</string>
    <string name="menu_6">Photos</string>
    <string name="menu_7">Mail</string>
    <string name="toast_saved_to_downloads_folder">Saved to downloads folder</string>
    <string name="notification_title_tap_to_open">Tap to open</string>
    <string name="notification_text_saved_as">Saved as %s</string>
</resources>
