<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/menu_1"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/menu_2"
            android:icon="@drawable/ic_reload"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/menu_3"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/menu_4"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/menu_5"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_5" />
        <item
            android:id="@+id/menu_6"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_6" />
        <item
            android:id="@+id/menu_7"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_7" />
</menu>
